--- a/app/views/politicians/show.html.erb
+++ b/app/views/politicians/show.html.erb
@@ -1,3 +1,3 @@
 <h3><%= @politician.first_name %> <%= @politician.last_name %></h3>
 
-<%= debug(@politician) %>
+<img src="<%= @politician.image_url %>">
