--- a/app/views/states/show.html.erb
+++ b/app/views/states/show.html.erb
@@ -1,7 +1,7 @@
 <ul>
   <% @state.summary.each do |representative| %>
     <li>
-      <%= link_to representative['firstlast'], politician_path(cid: representative['cid']) %>
+      <%= link_to representative['firstlast'], representative_path(cid: representative['cid']) %>
     </li>
   <% end %>
 </ul>
