state loader ready with foreign key

--- a/app/views/states/show.html.erb
+++ b/app/views/states/show.html.erb
@@ -1,7 +1,5 @@
 <ul>
-  <% @state.summary.each do |representative| %>
-    <li>
-      <%= link_to representative['firstlast'], representative_path(cid: representative['cid']) %>
-    </li>
+  <% @representatives.each do |representative| %>
+    <li><%= link_to representative.first_name + ' ' + representative.last_name, representative_path(cid: representative.cid) %></li>
   <% end %>
 </ul>
