images and state select

--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,7 +1,6 @@
-
 <h3>Browse by State</h3>
 <ul>
   <% @states.each do |state| %>
-    <li><%= link_to state['full_name'], state_path(state: state['abbreviated_name']) %></li>
+    <li class="col-md-4"><%= link_to state['full_name'], state_path(state: state['abbreviated_name']) %></li>
   <% end %>
 </ul>
