--- a/app/assets/stylesheets/states.scss
+++ b/app/assets/stylesheets/states.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the states controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+// Place all the styles related to the representative controller here.
+// They will automatically be included in application.css.
+// You can use Sass (SCSS) here: http://sass-lang.com/
+
+.representative-state-tile {
+  padding: 50px;
+}
+
+ul {
+  text-align: center;
+  list-style: none;
+}
