--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,13 +7,14 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag params[:controller] %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <meta name="turbolinks-cache-control" content="no-cache">
   </head>
 
   <body class="container">
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <h1>Poligap</h1>
+    <a href="/"><h1>Poligap</h1></a>
 
     <%= yield %>
 
