--- a/app/views/representative/show.html.erb
+++ b/app/views/representative/show.html.erb
@@ -1,3 +1,10 @@
 <h3><%= @representative.first_name %> <%= @representative.last_name %></h3>
 
 <img src="<%= @representative.image_url %>">
+
+<ul>
+  <li>Twitter: <%= link_to @representative.twitter_id, 'http://www.twitter.com/' + @representative.twitter_id %></li>
+</ul>
+
+
+<%= debug(@representative) %>
